# BoloGAN

./: README.md
BoloGAN/: README.md
BoloGAN/AthenaScripts/: run_FastCaloGAN_Full_pions.sh  run_FastCaloGAN_ttbar.sh
BoloGAN/common/: DataParameters.py  DataReader.py  EnergyLabelDefinition.py  GANInputParameters.py  Label.py  SampleRange.py  SetOptionsFromPath.py  TrainingInputParameters.py  VoxInputParameters.py  VoxelNormalisation.py  XMLHandler.py  config.sh  functions-old.sh  functions.sh  helper_functions.py  test_DataReader.py
BoloGAN/model/: README.md  conditional_wgangp.py  conditional_wgangp_old.py  condorTEMPLATE.sub  launch_V2_production_condor.sh  launch_V2_seed_condor.sh  launch_V2_seed_local.sh  launch_conditional_GAN_condor.sh  train_V2_production_wgangp.py  train_V2_seed_wgangp.py  train_conditional_wgangp.py
BoloGAN/plotting/: README.md  comparison_plots.py  condorTEMPLATE.sub  find_best_checkpoints.sh  find_best_checkpoints_production.sh  find_best_checkpoints_seed.sh  find_best_checkpoints_seed_local.sh  run_ranges.sh  (+25 more)
BoloGAN/rootToCsv/: CMakeLists.txt  Geometry-ATLAS-R2-2016-01-00-01.root  Geometry-ATLAS-R3S-2021-03-00-00.root  Makefile  README.md  cmake_install.cmake  condorTEMPLATE.sub  extractAlltoVox_condor.sh  extractOtherHadronsToVox_condor.sh  runVoxelisation  setup.sh  tag_logs_photons.txt  tag_logs_pions.txt
BoloGAN/rootToCsv/Root/: InputVoxelisationParameters.cxx  LinkDef.h  RunOnFCSHits.cxx  XMLReader.cxx  runVoxelisation.cxx
BoloGAN/rootToCsv/Voxelisation/: FCS_Cell.h  InputVoxelisationParameters.h  RunOnFCSHits.h  XMLReader.h
(+26 files in other folders)
